k8s-playground/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: uptime-kuma
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
